<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Card6">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Healthy Science Facts"
          android:gravity="center"
          android:layout_marginTop="10dp"
          android:textStyle="bold"
          android:textSize="20dp"/>
      <androidx.cardview.widget.CardView
          android:backgroundTint="#E9C3EF"
          app:cardCornerRadius="10dp"
          android:layout_width="350dp"
          android:layout_marginStart="5dp"
          android:layout_height="wrap_content">
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">
              <ImageView
                  android:layout_marginStart="5dp"
                  android:src="@drawable/img_15"
                  android:layout_width="100dp"
                  android:layout_height="100dp"/>
              <TextView

                  android:id="@+id/text1"
                  android:textStyle="bold"
                  android:text="@string/t11"
                  android:layout_marginStart="120dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
              <TextView

                  android:layout_below="@id/text1"
                  android:text="@string/t12"
                  android:layout_marginStart="120dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
          </RelativeLayout>


      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:backgroundTint="#F2F6C6"
          android:layout_marginTop="10dp"
          app:cardCornerRadius="10dp"
          android:layout_width="350dp"
          android:layout_marginStart="5dp"
          android:layout_height="wrap_content">
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">
              <ImageView
                  android:layout_marginStart="5dp"
                  android:src="@drawable/img_16"
                  android:layout_width="100dp"
                  android:layout_height="100dp"/>
              <TextView

                  android:id="@+id/text2"
                  android:textStyle="bold"
                  android:text="@string/t13"
                  android:layout_marginStart="120dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
              <TextView

                  android:layout_below="@id/text2"
                  android:text="@string/t14"
                  android:layout_marginStart="120dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
          </RelativeLayout>


      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:backgroundTint="#CDF69E"
          android:layout_marginTop="10dp"
          app:cardCornerRadius="10dp"
          android:layout_width="350dp"
          android:layout_marginStart="5dp"
          android:layout_height="wrap_content">
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">
              <ImageView
                  android:layout_marginStart="5dp"
                  android:src="@drawable/img_17"
                  android:layout_width="100dp"
                  android:layout_height="100dp"/>
              <TextView

                  android:id="@+id/text3"
                  android:textStyle="bold"
                  android:text="@string/t15"
                  android:layout_marginStart="120dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
              <TextView

                  android:layout_below="@id/text3"
                  android:text="@string/t16"
                  android:layout_marginStart="120dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
          </RelativeLayout>


      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:backgroundTint="#B2EDF4"
          android:layout_marginTop="10dp"
          app:cardCornerRadius="10dp"
          android:layout_width="350dp"
          android:layout_marginBottom="20dp"
          android:layout_marginStart="5dp"
          android:layout_height="wrap_content">
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">
              <ImageView
                  android:layout_marginStart="5dp"
                  android:src="@drawable/img_18"
                  android:layout_width="100dp"
                  android:layout_height="100dp"/>
              <TextView

                  android:id="@+id/text4"
                  android:textStyle="bold"
                  android:text="@string/t17"
                  android:layout_marginStart="120dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
              <TextView

                  android:layout_below="@id/text4"
                  android:text="@string/t18"
                  android:layout_marginStart="120dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
          </RelativeLayout>


      </androidx.cardview.widget.CardView>





  </LinearLayout>
</ScrollView>


</LinearLayout>